crates/ui/tests/snapshots/controller__help_bar_playstation.snap
---
source: crates/ui/tests/controller.rs
expression: "rows(PadKind::PlayStation)"
---
□ danger zone: OFF · Create auto-end: OFF
✕ select · △ info · R1 next unit · L2 rewind · ◯ menu · Options end turn
