crates/ui/tests/snapshots/controller__tip_playstation.snap
---
source: crates/ui/tests/controller.rs
expression: sony.snapshot()
---
                                                                      ┌────────────────────────────┐
       ╔═ Your move ══════════════════════════════════════════╗       │ Plain                      │
       ║                                                      ║       │ DEF +0  AVO +0             │
       ║ Steer the cursor with D-pad/stick. Press ✕ on one of ║       │                            │
       ║ your units to select it. R1 jumps to the next unit   ║       │                            │
       ║ that can still act; △ shows a unit's details.        ║       │ Test Lord                  │
       ║                                                      ║       │ Exile  Lv 1                │
       ║ ✕ close                                              ║       │ HP 19/19   ██████████      │
       ╚══════════════════════════════════════════════════════╝       │ Player                     │
                                                                      │                            │
                                                                      │                            │
                    ≈≈≈≈≈≈≈≈≈≈....♣♣♣♣♠♠♠♠^^^^▲▲                      │                            │
                    ≈≈≈≈≈≈≈≈....··Ra··♣♣♣♣^^^^^^                      │                            │
                    ≈≈≈≈≈≈====······Br..♣♣♣♣....                      │                            │
                    ..≈≈≈≈..··..............╦╦..                      │                            │
                    ....Ar····....Br..▓▓▓▓▓▓▓▓..                      │                            │
                    ..♣♣··Lo..╦╦......▓▓░░╦╦▓▓..                      │                            │
                    ♣♣♣♣··MaKn........▓▓░░░░▓▓..                      │                            │
                    ♣♣♠♠··..........Fr▓▓▓▓▐▌▓▓..                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      └────────────────────────────┘
                                                          □ danger zone: OFF · Create auto-end: OFF 
 ✕ close                                                                                   F2 debug 
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaabbcccccccccccbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaabdcccccddddddddddddddddddddddb
aaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaabddddddddddddddddddddddddddddb
aaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaabddddddddddddddddddddddddddddb
aaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaabddddddddddddddddddddddddddddb
aaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaabdeeeeeeeeeddddddddddddddddddb
aaaaaaabddddddddddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaabddddddddddddddddddddddddddddb
aaaaaaabdfffffffddddddddddddddddddddddddddddddddddddddddddddddbaaaaaaabddddddddddddggggggggggddddddb
aaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaabdffffffdddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaahhhhhhiiiijjjjkkkkllllmmmmnnaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaahhhhiiiijjjjooppookkkkmmmmmmaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaahhiiiiqqqqoooooorrjjkkkkjjjjaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaajjiiiijjoojjjjjjjjjjjjjjssjjaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaajjjjttoooojjjjrrjjuuuuuuuujjaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaajjkkoovvjjssjjjjjjuuwwssuujjaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaakkkkoovvvvjjjjjjjjuuwwwwuujjaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaakklloojjjjjjjjjjrruuuuxxuujjaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaayyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyya
ayyyyyyyaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaayyyyyyyya
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text_highlight bg:panel_bg
d = fg:text bg:panel_bg
e = fg:player bg:panel_bg
f = fg:text_dim bg:panel_bg
g = fg:hp_high bg:panel_bg
h = fg:water bg:sea
i = fg:water bg:water_bg
j = fg:grass bg:grass_bg
k = fg:forest bg:forest_bg
l = fg:thicket bg:thicket_bg
m = fg:mountain bg:mountain_bg
n = fg:peak bg:peak_bg
o = fg:road bg:road_bg
p = fg:enemy bg:road_bg
q = fg:wood bg:water_bg
r = fg:enemy bg:grass_bg
s = fg:fort bg:fort_bg
t = fg:player bg:road_bg
u = fg:stone bg:stone_bg
v = fg:player bg:grass_bg
w = fg:floor bg:floor_bg
x = fg:wood bg:stone_bg
y = fg:text_dim bg:black
--- overlays ---
over  208,270 16x2  hp_high
over  224,286 16x2  hp_high
over  192,254 16x2  hp_high
over  288,222 16x2  hp_high
over  272,254 16x2  hp_high
over  272,206 16x2  hp_high
over  288,302 16x2  hp_high
over  208,286 16x2  hp_high
over  207,256 3x1  #786e50
over  207,256 1x3  #786e50
over  221,256 3x1  #786e50
over  223,256 1x3  #786e50
over  207,269 3x1  #786e50
over  207,267 1x3  #786e50
over  221,269 3x1  #786e50
over  223,267 1x3  #786e50
